# citeman

./: .env  Cargo.toml  PLAN.md
crossref/: Cargo.toml
crossref/docs/: api_guide.md  json_format.md
crossref/src/: lib.rs  message.rs
crossref/tests/: example_work.json  works_json.rs
migrations/2019-04-28-112106_setup/: down.sql  up.sql
sql/: create_tables.sql
src/: config.rs  document.rs  lib.rs  main.rs  schema.rs
src/document/: crossref.rs
